router para registro funcionando

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <nb-layout>
 
-<!--   <nb-layout-header fixed>
-    <img src="../assets/logo-conductor-connect.svg" alt="">
-  </nb-layout-header> -->
+<nb-layout-header fixed>
+  <img src="../assets/logo-conductor-connect.svg" alt="">
+</nb-layout-header>
 
   
   <nb-layout-column>
-      <button nbButton routerLink='auth/login'>Acesse já!</button>
-    <router-outlet></router-outlet>
+      <a routerLink='auth/login'>Acesse já!</a>
+      <router-outlet></router-outlet>
   </nb-layout-column>
 
 </nb-layout>
