--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,7 +2,7 @@
     <img src="../../../assets/logo-conductor-connect.svg" alt="">
 </div> -->
 <h1 id="title" class="title">Login</h1>
-<p class="sub-title">Efetue o login para acessar os recursos do sistema.</p>
+<p class="sub-title">Efetue o login para acesso aos recursos do sistema.</p>
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
   <p class="alert-title"><b>Oh snap!</b></p>
@@ -21,27 +21,18 @@
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
 
   <div class="form-control-group">
-    <label class="label" for="input-email">Email address:</label>
+    <label class="label" for="input-username">Usuário:</label>
     <input nbInput
            fullWidth
-           [(ngModel)]="user.email"
-           #email="ngModel"
-           name="email"
-           id="input-email"
-           pattern=".+@.+\..+"
-           placeholder="Email address"
+           [(ngModel)]="user.username"
+           #username="ngModel"
+           name="username"
+           id="input-username"
+           placeholder="Usuário"
            autofocus
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : ''"
-           [required]="getConfigValue('forms.validation.email.required')"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="error-message" *ngIf="email.errors?.required">
-        Email is required!
-      </p>
-      <p class="error-message" *ngIf="email.errors?.pattern">
-        Email should be the real one!
-      </p>
-    </ng-container>
+           [status]="username.dirty ? (username.invalid  ? 'danger' : 'success') : ''"
+           [required]="getConfigValue('forms.validation.username.required')"
+           [attr.aria-invalid]="username.invalid && username.touched ? true : null">
   </div>
 
   <div class="form-control-group">
